# rec-test-task3

./: .gitignore  CMakeLists.txt  Makefile  README.md  data.txt  data2.txt  main.cpp
include/: BruteForceStrategy.hpp  FailingStrategy.hpp  Solution.hpp  Strategy.hpp
src/: BruteForceStrategy.cpp  FailingStrategy.cpp  Solution.cpp
test/: BruteForceStrategyTest.cpp  FailingStrategyTest.cpp  TestData.hpp  TestHelp.hpp
